Add devise initial settings, plus flash messages simples layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,9 @@
       <%= render 'layouts/content_header' %>
 
       <div class="line"></div>
-      <%= yield %>
+      <%= render 'layouts/flash_messages' %>
       <div class="line"></div>
+      <%= yield %>
     </div>
   </body>
 
