--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require bootstrap.min.css
+ *= require simple-line-icons.css
  *= require jquery.mCustomScrollbar.min.css
 
  */
