--- a/app/views/layouts/authenticated.html.erb
+++ b/app/views/layouts/authenticated.html.erb
@@ -2,10 +2,7 @@
 <html>
   <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-      <meta name="description" content="Voting app through blockchain">
-      <meta name="author" content="Hugo Hernani">
-
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <%= csrf_meta_tags %>
       <%= csp_meta_tag %>
@@ -14,14 +11,25 @@
       <%= javascript_include_tag 'application' %>
       <title>Voting app</title>
 
-      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
       <!-- Font Awesome JS -->
       <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
       <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-
   </head>
-  <body id="page-top">
-    <%= yield %>
+  <body>
+    <div class="wrapper">
+      <%= render 'layouts/authenticated/sidebar' %>
+    </div>
+
+    <div id="content">
+      <%= render 'layouts/authenticated/content_header' %>
+
+      <% if flash.any? %>
+        <div class="line"></div>
+        <%= render 'layouts/flash_messages' %>
+        <div class="line"></div>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
+
 </html>
